Add more padding to top of profile on mobile

--- a/index.css
+++ b/index.css
@@ -594,4 +594,7 @@ body {
       ),
       url('https://images.unsplash.com/photo-1519810755548-39cd217da494?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3088&q=80') !important;
   }
+  #profile {
+    padding-top: 15vh;
+  }
 }
